# vectorize

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  disassemble.c  displacement derivatives  function bytes  function bytes.asm  machine.json  main.c  vectorize avx.asm  vectorize avx2.asm  vectorize avx512.asm  vectorize sse2.asm  vectorize sse42.asm  vectorize test.c  vectorize.c  x86_64 calling convention.txt
.github/workflows/: cmake.yml
NOTES/: ARITHMETIC  CONVERSION  LOGICAL  MACHINE  MOVE
include/vectorize/: vectorize.h
